Implement customer  login and register functionality;  update database models and routes

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,10 +1,10 @@
 <!-- index.html -->
 {% extends 'base.html' %}
-{% block title %}Home - HotelEase{% endblock %}
+{% block title %}Home - WTM Hotel{% endblock %}
 {% block content %}
 <section class="hero">
     <div class="hero-overlay">
-        <h1>Welcome to HotelEase</h1>
+        <h1>Welcome to WTM Hotel</h1>
         <p>Your comfort is our priority.</p>
         <a class="btn" href="booking.html">Book Now</a>
     </div>
