--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,6 +27,6 @@
 </main>
 
 
-<footer class="footer">© 2025 HotelEase. All Rights Reserved.</footer>
+<footer class="footer">© 2025 WTM Hotel. All Rights Reserved.</footer>
 </body>
 </html>
