--- a/app/templates/admin_dashboard.html
+++ b/app/templates/admin_dashboard.html
@@ -7,7 +7,7 @@
     <div class="dashboard-buttons">
         <a href="/admin/staff" class="dashboard-btn">View Staff</a>
         <a href="/admin/staff/add" class="dashboard-btn">Add Staff</a>
-        <a href="admin/revenue" class="dashboard-btn">Revenue</a>
+        <a href="/admin/revenue" class="dashboard-btn">Revenue</a>
         <a href="/admin/rooms" class="dashboard-btn">Room Details</a>
         <a href="/admin/customers" class="dashboard-btn">Customer Details</a>
     </div>
