Update customer login and registration templates for consistency in titles

--- a/app/templates/customer_register.html
+++ b/app/templates/customer_register.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
-{% block title %}Employee Registration - HotelEase{% endblock %}
+{% block title %}Customer Registration - HotelEase{% endblock %}
 
 {% block content %}
 <div class="register-container">
-    <h2>Employee Registration</h2>
+    <h2>Customer Registration</h2>
     <form method="POST" action="">
         {{ form.hidden_tag() }}
 
