--- a/app/templates/customer_login.html
+++ b/app/templates/customer_login.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Login{% endblock %}
+{% block title %}Customer-Login{% endblock %}
 
 {% block content %}
 
-<h2>Login</h2>
+<h2>Customer Login</h2>
 
 <form method="POST" action="{{ url_for('customer.login') }}" class="login-form">
 
