--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,8 +14,8 @@
 <header class="navbar">
 <div class="logo">HotelEase</div>
 <nav>
-<a href="index.html">Home</a>
-<a href="rooms.html">Rooms</a>
+<a href="{{url_for('auth.home')}}">Home</a>
+<a href="{{url_for('rooms.rooms')}}">Rooms</a>
 <a href="booking.html">Booking</a>
 <a href="contact.html">Contact</a>
 </nav>
