--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,8 +16,8 @@
 <nav>
 <a href="{{url_for('auth.home')}}">Home</a>
 <a href="{{url_for('rooms.rooms')}}">Rooms</a>
-<a href="booking.html">Booking</a>
-<a href="contact.html">Contact</a>
+<a href="{{url_for('customer.book')}}">Booking</a>
+
 </nav>
 </header>
 
