--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,17 +5,17 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>{% block title %}Hotel Management System{% endblock %}</title>
-<!-- In base.html or admin_register.html -->
+<!-- In base.html -->
 <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
 
 </head>
 <body>
 <header class="navbar">
-<div class="logo">HotelEase</div>
+<div class="logo">Hotel WTM</div>
 <nav>
 <a href="{{url_for('auth.home')}}">Home</a>
-<a href="{{url_for('rooms.rooms')}}">Rooms</a>
+<a href="{{url_for('auth.Rooms')}}">Rooms</a>
 <a href="{{url_for('customer.book')}}">Booking</a>
 
 </nav>
@@ -27,6 +27,15 @@
 </main>
 
 
-<footer class="footer">© 2025 WTM Hotel. All Rights Reserved.</footer>
+<footer class="footer">
+        <div class="footer-content">
+            <p>© 2025 WTM Hotel. All Rights Reserved.</p>
+            <div class="footer-buttons">
+                <a href="{{ url_for('auth.contact') }}" class="footer-btn">Contact Us</a>
+                <a href="{{ url_for('auth.about') }}" class="footer-btn">About Us</a>
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
