--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,7 +6,7 @@
     <div class="hero-overlay">
         <h1>Welcome to WTM Hotel</h1>
         <p>Your comfort is our priority.</p>
-        <a class="btn" href="booking.html">Book Now</a>
+        <a class="btn" href="{{url_for('customer.book')}}">Book Now</a>
     </div>
 </section>
 
