--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1438,3 +1438,35 @@ small {
         padding: 30px 20px;
     }
 }
+.flash-container {
+    width: 90%;
+    margin: 20px auto;
+}
+
+.flash-message {
+    padding: 12px 16px;
+    margin-bottom: 10px;
+    border-radius: 6px;
+    font-weight: 500;
+}
+
+/* Categories */
+.flash-success {
+    background-color: #d4edda;
+    color: #155724;
+}
+
+.flash-error {
+    background-color: #f8d7da;
+    color: #721c24;
+}
+
+.flash-warning {
+    background-color: #fff3cd;
+    color: #856404;
+}
+
+.flash-info {
+    background-color: #d1ecf1;
+    color: #0c5460;
+}
