--- a/app/templates/add_rooms.html
+++ b/app/templates/add_rooms.html
@@ -1,5 +1,19 @@
 {% extends "base.html" %}
 {% block title %}Add Room{% endblock %}
+{% block navbar %}
+<header class="navbar simple-navbar">
+    <div class="logo">Hotel WTM</div>
+    <nav>
+        <a href="{{ url_for('auth.home') }}">Home</a>
+         <a href="{{ url_for('auth.admin_register') }}">AdminRegister</a>
+        <a href="{{ url_for('auth.Adminlogin') }}">AdminLogin</a>
+        <a href="{{url_for('admin.admin_dashboard')}}">AdminDashboard</a>
+
+    </nav>
+</header>
+
+{% endblock %}
+
 
 {% block content %}
 <div class="register-container">
