--- a/app/templates/add_staff.html
+++ b/app/templates/add_staff.html
@@ -1,6 +1,21 @@
 {% extends "base.html" %}
 {% block title %}Add Staff - Admin{% endblock %}
 
+{% block navbar %}
+<header class="navbar simple-navbar">
+    <div class="logo">Hotel WTM</div>
+    <nav>
+        <a href="{{ url_for('auth.home') }}">Home</a>
+         <a href="{{ url_for('auth.admin_register') }}">AdminRegister</a>
+        <a href="{{ url_for('auth.Adminlogin') }}">AdminLogin</a>
+        <a href="{{url_for('admin.admin_dashboard')}}">AdminDashboard</a>
+
+    </nav>
+</header>
+
+{% endblock %}
+
+
 {% block content %}
 <div class="register-container">
   <h2>Add New Staff</h2>
