--- a/app/templates/admin_dashboard.html
+++ b/app/templates/admin_dashboard.html
@@ -1,5 +1,21 @@
 {% extends "base.html" %}
 
+
+{% block navbar %}
+<header class="navbar simple-navbar">
+    <div class="logo">Hotel WTM</div>
+    <nav>
+        <a href="{{ url_for('auth.home') }}">Home</a>
+         <a href="{{ url_for('auth.admin_register') }}">AdminRegister</a>
+        <a href="{{ url_for('auth.Adminlogin') }}">AdminLogin</a>
+        <a href="{{url_for('admin.admin_dashboard')}}">AdminDashboard</a>
+
+    </nav>
+</header>
+
+{% endblock %}
+
+
 {% block content %}
 <div class="dashboard-container">
     <h2>Admin Dashboard</h2>
