--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,37 +5,55 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>{% block title %}Hotel Management System{% endblock %}</title>
-<!-- In base.html -->
+
 <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-
-
+<script src="https://cdn.tailwindcss.com"></script>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
+ {% block navbar %}
 <header class="navbar">
-<div class="logo">Hotel WTM</div>
-<nav>
-<a href="{{url_for('auth.home')}}">Home</a>
-<a href="{{url_for('auth.Rooms')}}">Rooms</a>
-<a href="{{url_for('customer.book')}}">Booking</a>
-
-</nav>
+    <div class="logo">Hotel WTM</div>
+   
+    <nav>
+        <a href="{{ url_for('auth.home') }}">Home</a>
+        <a href="{{ url_for('customer.register') }}">Register</a>
+        <a href="{{ url_for('customer.login') }}">Login</a>
+        <a href="{{ url_for('auth.Rooms') }}">Rooms</a>
+        <a href="{{ url_for('customer.book') }}">Booking</a>
+         <a href="{{url_for('admin.admin_dashboard')}}">AdminDashboard</a>
+    </nav>
+  
 </header>
+  {% endblock %}
 
+<!-- Flash Messages -->
+{% with messages = get_flashed_messages(with_categories=True) %}
+  {% if messages %}
+    <div class="flash-container">
+      {% for category, message in messages %}
+        <div class="flash-message flash-{{ category }}">
+          {{ message }}
+        </div>
+      {% endfor %}
+    </div>
+  {% endif %}
+{% endwith %}
 
 <main>
 {% block content %}{% endblock %}
 </main>
 
-
 <footer class="footer">
-        <div class="footer-content">
-            <p>© 2025 WTM Hotel. All Rights Reserved.</p>
-            <div class="footer-buttons">
-                <a href="{{ url_for('auth.contact') }}" class="footer-btn">Contact Us</a>
-                <a href="{{ url_for('auth.about') }}" class="footer-btn">About Us</a>
-            </div>
+    <div class="footer-content">
+        <p>© 2025 WTM Hotel. All Rights Reserved.</p>
+        <div class="footer-buttons">
+            <a href="{{ url_for('auth.contact') }}" class="footer-btn">Contact Us</a>
+            <a href="{{ url_for('auth.about') }}" class="footer-btn">About Us</a>
         </div>
-    </footer>
+    </div>
+</footer>
 
 </body>
 </html>
