--- a/app/templates/room_details.html
+++ b/app/templates/room_details.html
@@ -1,6 +1,17 @@
 {% extends "base.html" %}
 {% block title %}Room Details - Admin{% endblock %}
+{% block navbar %}
+<header class="navbar simple-navbar">
+    <div class="logo">Hotel WTM</div>
+    <nav>
+        <a href="{{ url_for('auth.home') }}">Home</a>
+         <a href="{{ url_for('auth.admin_register') }}">AdminRegister</a>
+        <a href="{{ url_for('auth.Adminlogin') }}">AdminLogin</a>
+        <a href="{{url_for('admin.admin_dashboard')}}">AdminDashboard</a>
 
+    </nav>
+</header>
+{% endblock %}
 {% block content %}
 <div class="register-container">
   <h2>Room Details</h2>
