--- a/app/templates/customer_booking.html
+++ b/app/templates/customer_booking.html
@@ -9,7 +9,9 @@
 
         <form method="POST" class="space-y-4">
             {{ form.hidden_tag() }}
-
+  {% for error in form.checkOut.errors %}
+        <p style="color:red;">{{ error }}</p>
+    {% endfor %}
             <!-- Room Selection -->
             <div>
                 <label class="block mb-1 font-medium text-gray-700">Select Room:</label>
